# bodega

./: Cargo.toml  README.md  clippy.toml
bodega/: Cargo.toml
bodega-macros/: Cargo.toml
bodega-macros/src/: db_bmc.rs  helpers.rs  insert.rs  json_value.rs  lib.rs  select.rs  store_enum.rs  update.rs  uuid_id.rs
bodega/src/: base.rs  custom_option.rs  error.rs  lib.rs  model_manger.rs  pagination.rs
examples/simple-crud/: Cargo.toml
examples/simple-crud/src/: lib.rs
