[package]
name = "bodega-macros"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
description = "bodega proc macros"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
heck = "0.5.0"
proc-macro2 = "1.0.88"
quote = "1.0.37"
syn = "2.0.79"

[lints]
workspace = true

[dev-dependencies]
bodega = { path = "../bodega" }
chrono = { workspace = true }
derive_builder = { workspace = true }
sqlx = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
serde = { workspace = true }
trybuild = { version = "1.0", features = ["diff"] }
uuid = { workspace = true }
