[package]
name = "bodega"
version = "0.2.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
chrono = { workspace = true }
derive_builder = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

bodega-macros = { version = "0.2", path = "../bodega-macros" }

[dev-dependencies]
strum = { version = "0.26", features = ["derive"] }

[lints]
workspace = true
