[package]
name = "bodega"
version = "0.7.1"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
chrono = { workspace = true }
derive_builder = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }

bodega-macros = { version = "0.7.1", path = "../bodega-macros" }

[dev-dependencies]
strum = { version = "0.26", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
