[package]
name = "simple-crud"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
bodega = { path = "../../bodega" }
chrono = { workspace = true }
derive_builder = { workspace = true }
strum = { version = "0.26", features = ["derive"] }
sqlx = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
